# SysAndDev

Practical/: CMakeLists.txt  notes.cpp  revision2.cpp
Practical/Lab1/: CMakeLists.txt  ex3.c  ex4.c  main.cpp  notes.cpp  test.c
Practical/Lab2/: CMakeLists.txt  Ex3Main.cpp  Ex4Main.cpp  Queue.h  Stack.h  ex1.cpp  ex3.cpp  ex4.cpp  lab.txt
Practical/Lab3/: CMakeLists.txt  Queue.h  Stack.h  StackClass.cpp  ex1.cpp  ex2.cpp  ex3.cpp  lab03.txt
Practical/Lab4/: CMakeLists.txt  ex1.cpp  ex2.cpp  ex3.cpp
Practical/Lab5/: CMakeLists.txt  q2.cpp  q3.cpp  q4.cpp
Practical/LectureNotes/: CMakeLists.txt
Practical/LectureNotes/Unit2-recap/: CMakeLists.txt  ex1.c  ex2.c  ex3.c  practice.cpp  test.txt
Practical/LectureNotes/Unit3-cppBasics/: CMakeLists.txt  practice.cpp  revision.cpp
Practical/LectureNotes/Unit4-cppLibrary/: CMakeLists.txt  WordFrequencyCounter.cpp  algoLibExercise.cpp  ioPractice.cpp  notes.cpp  notes2.cpp  notesCopyControl.cpp  template.cpp
Practical/LectureNotes/Unit5-multithreading/: CMakeLists.txt  exercise2Posex.c  exercisePosex.c  notes.c  notesUnit5.cpp  practiceCpp.cpp
Practical/LectureNotes/Unit6-synchronization/: CMakeLists.txt  SynchronizationInPosix.c  cppTaskNotes.cpp  cvEx1.cpp  cvEx2.cpp  cvEx3.cpp  ex1.c  ex1.cpp  ex1Barrier.c  ex2.c  ex2.cpp  ex3.cpp  ex4.c  ex4.cpp  ex5.cpp  ex6.cpp  notes.cpp  notes2.cpp  notes3.cpp  notesBarrier.c  notesBarrier2.c  notesCV.c  notesCV.cpp  notesTP.cpp  practice.cpp
Practical/PastExams/: CMakeLists.txt  examQ1.cpp
Practical/PastExams/2023Exam/: 2023-01-16-atomic.cpp  2023-01-16-copy-members.cpp  2023-01-16-ref-on-off.cpp  2023-01-16-ref.cpp  vector-filler.cpp
