add_executable(unit6 notes.cpp)
add_executable(unit6o2 notes2.cpp)
add_executable(unit6o3 notes3.cpp)
add_executable(Exercise ex1.cpp)
add_executable(unit6ex2 ex2.cpp)
add_executable(unit6ex3 ex3.cpp)
add_executable(unit6ex4 ex4.cpp)
add_executable(unit6ex5 ex5.cpp)
add_executable(unit6ex6 notesCV.cpp)
add_executable(unit6ex7 notesCV.c)
add_executable(unit6cvEx1 cvEx1.cpp)
add_executable(unit6barrierEx1 ex1Barrier.c)
add_executable(unit6barrierNotes notesBarrier.c)
